--- a/res/bounds.yaml
+++ b/res/bounds.yaml
@@ -1,33 +1,37 @@
 cigars-dindep-1000:
-  1: {
-    M0: [-19.9, -19.1],
-    alpha: [-0.2, -0.08], beta: [1.67, 2.87], alpha_c: [-0.016, 0.01],
-    gamma_M_logzsol: [-0.65, 0.45]
-  }
-  2: {
-    M0: [-19.66, -19.28], sigma_res: [0.07, 0.15],
-    alpha: [-0.17, -0.11], beta: [1.91, 2.50], alpha_c: [-0.013, 0.010],
-    step_M_logmass: [-0.2, 0.08], gamma_M_logzsol: [-0.3, 0.2], gamma_M_age: [-0.05, 0.014]
-  }
-  3: {
-    M0: [-19.62, -19.36], sigma_res: [0.08, 0.136],
-    alpha: [-0.1643, -0.1234], beta: [2.044, 2.469], alpha_c: [-0.013, 0.010],
-    step_M_logmass: [-0.2, 0.05], gamma_M_logzsol: [-0.22, 0.13], gamma_M_age: [-0.05, 0]
-  }
-  4: {
-    M0: [-19.62, -19.36], sigma_res: [0.08, 0.136],
-    alpha: [-0.1643, -0.1234], beta: [2.044, 2.469], alpha_c: [-0.013, 0.010],
-    step_M_logmass: [-0.2, 0.05], gamma_M_logzsol: [-0.22, 0.13], gamma_M_age: [-0.05, 0]
-  }
+  1:
+    M0: [-19.93, -19.27]
+    sigma_res: [0, 0.154]
+    alpha: [-0.19, -0.08]
+    beta: [1.97, 2.93]
+    alpha_c: [-0.011, 0.013]
+    gamma_M_logzsol: [-0.72, 0.42]
+    gamma_M_age: [-0.09, 0.04]
+  2:
+    M0: [-19.71, -19.27]
+    sigma_res: [ 0.057, 0.147]
+    alpha: [-0.1725, -0.1147]
+    beta: [2.042, 2.596]
+    alpha_c: [-0.008, 0.0129]
+    gamma_M_logzsol: [-0.3, 0.18]
+    step_M_logmass: [-0.2, 0.1661]
+    gamma_M_age: [-0.06, 0]
+  3:
+    M0: [-19.66, -19.3]
+    sigma_res: [0.07232, 0.1393]
+    alpha: [-0.1675, -0.12]
+    beta: [2.042, 2.494]
+    alpha_c: [-0.008, 0.01136]
+    gamma_M_logzsol: [-0.276, 0.1542]
+    step_M_logmass: [-0.2, 0.15]
+    gamma_M_age: [-0.06, 0]
 cigars-dindep-10000:
-  0: {
-    M0: [-19.66, -19.28], sigma_res: [0.07, 0.15],
-    alpha: [-0.17, -0.11], beta: [1.91, 2.50], alpha_c: [-0.013, 0.010],
-    step_M_logmass: [-0.2, 0.08], gamma_M_logzsol: [-0.3, 0.2], gamma_M_age: [-0.05, 0.014]
-  }
-  1: {
-    M0: [-19.56, -19.42], sigma_res: [0.087, 0.108],
-    alpha: [-0.1476, -0.1345], beta: [2.15, 2.30], alpha_c: [-0.0036, 0.0037],
-    step_M_logmass_loc: [9.75, 10.25],
-    step_M_logmass: [-0.135, 0.000], gamma_M_logzsol: [-0.146, 0.000], gamma_M_age: [-0.040, -0.023]
-  }
+  1:
+    M0: [-19.58, -19.44]
+    sigma_res: [0.0857, 0.1085]
+    alpha: [-0.1463, -0.1319]
+    beta: [2.125, 2.274]
+    alpha_c: [-0.001901, 0.005073]
+    gamma_M_logzsol: [-0.1786, -0.03517]
+    step_M_logmass: [-0.1844, 0.02514]
+    gamma_M_age: [-0.03837, -0.0216]
